--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,14 @@
 name: ldsc
 channels:
 - bioconda
+- conda-forge
 dependencies:
-- python=2.7
-- bitarray=0.8
-- nose=1.3
-- pybedtools=0.7
+- python=3.8
+- bitarray=2.6.0
+- nose=1.3.7
+- pybedtools=0.9.0
 - pip
 - pip:
-  - scipy==0.18
-  - pandas==0.20
-  - numpy==1.16
+  - scipy==1.10.1
+  - pandas==1.5.3
+  - numpy==1.24.3
